# scrambler

./: .gitignore  CMakeLists.txt  README.md
doc/: choosen_constants.txt
include/: scrambler.h
src/: scrambler.c
test/: test.py~
tests/: CMakeLists.txt  test.c
